--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,22 @@
 <resources>
     <string name="app_name">EcoMap</string>
     <string name="title_activity_maps">Eco map</string>
+
+    <string-array name="navigation_array">
+        <item>Map</item>
+        <item>Statistics</item>
+        <item>TOP 10</item>
+        <item>Profile</item>
+        <item>Resources</item>
+    </string-array>
+
+    <string-array name="problem_types">
+        <item>Severe floods</item>
+        <item>Wildfires</item>
+    </string-array>
+
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
+    <string name="action_websearch">Web search</string>
+    <string name="app_not_available">Sorry, there\'s no web browser available</string>
 </resources>
