--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,16 +16,18 @@
         <item>Activity</item>
     </string-array>
 
-    <string name="problem_types">Hello</string>
+    <string name="action_add_polygon">Add polygon</string>
+    <string name="action_settings">Settings</string>
+
+    <!--string name="problem_types">Hello</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_details">Details</string>
-    <string name="app_not_available">Sorry, there\'s no web browser available</string>
-
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_not_available">Sorry, there\'s no web browser available</string-->
+    <!--string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_problem_details">ProblemDetailsActivity</string>
+    <string name="hello_world">Hello world!</string-->
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+
+
 </resources>
