--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,17 +30,21 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Strings related to login -->
-    <string name="title_fragment_login">Sign in</string>
+    <string name="title_login_layout">Sign In</string>
+    <string name="title_registration_layut">Sign Up</string>
+    <string name="prompt_first_name">First Name</string>
+    <string name="prompt_second_name">Second Name</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="prompt_confirm_password">Confirm Password</string>
+    <string name="action_sign_in">Sign in or Register</string>
+    <string name="action_sign_in_short">Sign In</string>
     <string name="plus_sign_out">Switch Google+ account</string>
     <string name="plus_disconnect">Disconnect from Google+</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <color name="white">#FFFFFF</color>
+
 
 </resources>
