--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
         <item>TOP 10</item>
         <item>Profile</item>
         <item>Resources</item>
-        <item>Login</item>
     </string-array>
 
     <string-array name="problem_details_tabs">
@@ -20,6 +19,7 @@
     <string name="action_add_polygon">Add polygon</string>
     <string name="action_settings">Settings</string>
     <string name="action_details">Details</string>
+    <string name="action_update">Update</string>
     <string name="title_activity_problem_details">ProblemDetailsActivity</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
@@ -46,5 +46,7 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
 
+    <string name="fileNamePreferences">EcoMapPref</string>
+    <string name="prefNumRevision">numRevision</string>
 
 </resources>
