Under Construction Message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
         <item>Map</item>
         <item>Statistics</item>
         <item>TOP 10</item>
-        <item>Profile</item>
+        <item>Filters</item>
         <item>Resources</item>
     </string-array>
 
