--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,6 @@
         <item>Filters</item>
         <item>Resources</item>
         <item>Login</item>
-        <item>Logout</item>
     </string-array>
 
     <string-array name="problem_details_tabs">
@@ -55,5 +54,7 @@
     <string name="proceed">Proceed</string>
     <string name="cancel">Cancel</string>
     <string name="message_you_are_loged">You are already logged in</string>
+
+    <string name="login_logout">Login</string>
 
 </resources>
