--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,9 +27,11 @@
     <string name="gridview_img_description">Image</string>
     <string name="title_activity_view_photos">Problem\'s photos</string>
 
+    <string name="message_log_in_to_leave_comments">Log in to leave a comment</string>
+
     <string name="hello_world">Hello world!</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Strings related to login -->
@@ -48,11 +50,21 @@
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <string name="message_you_are_logged">You are already logged in</string>
+    <!---->
 
     <string name="fileNamePreferences">EcoMapPref</string>
     <string name="prefNumRevision">numRevision</string>
     <string name="proceed">Proceed</string>
     <string name="cancel">Cancel</string>
-    <string name="message_you_are_loged">You are already logged in</string>
+
+
+
+    <!-- Accessibility content descriptions block-->
+    <string name="user_avatar">User avatar</string>
+    <string name="write_comment">Write a comment...</string>
+    <string name="button_send_comment_caption">Post</string>
+    <string name="message_write_something_to_post">Write something to post</string>
+    <!---->
 
 </resources>
