--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,6 +9,16 @@
         <item>Войти</item>
     </string-array>
 
+    <string-array name="types">
+        <item>Проблемы лесов</item>
+        <item>Свалка</item>
+        <item>Незаконное строительство</item>
+        <item>Проблемы водоёмов</item>
+        <item>Угроза биоразнообразию</item>
+        <item>Браконьерство</item>
+        <item>Прочие проблемы</item>
+    </string-array>
+
     <string name="message_you_are_logged">Вы уже вошли в систему</string>
     <string name="first_name_blank">Имя не может быть пустым</string>
     <string name="second_name_blank">Фамилия не может быть пустой</string>
@@ -55,11 +65,14 @@
     <string name="problem_type_string_1">Проблемы лесов</string>
     <string name="problem_type_string_2">Свалка</string>
     <string name="problem_type_string_3">Незаконное строительство</string>
-    <string name="problem_type_string_4">Проблемы водойомов</string>
+    <string name="problem_type_string_4">Проблемы водоёмов</string>
     <string name="problem_type_string_5">Угроза биоразнообразию</string>
     <string name="problem_type_string_6">Браконьерство</string>
     <string name="problem_type_string_7">Прочие проблемы</string>
 
     <string name="language_menu">Язык</string>
     <string name="choose_language">Выберите язык</string>
+    <string name="error_need_to_sign_in">Только авторизированые пользователи могут добавлять проблему. Войдите либо зарегестрируйтесь</string>
+    <string name="reset">Сброс</string>
+    <string name="ok">Окей</string>
 </resources>
