--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -9,6 +9,16 @@
         <item>Увійти</item>
     </string-array>
 
+    <string-array name="types">
+        <item>Проблеми лісів</item>
+        <item>Свалка</item>
+        <item>Незаконне будівництво</item>
+        <item>Проблеми водоймищ</item>
+        <item>Загроза біорізноманіттю</item>
+        <item>Браконьєрство</item>
+        <item>Інші проблеми</item>
+    </string-array>
+
     <string name="message_you_are_logged">Ви вже увійшли до системи</string>
     <string name="first_name_blank">Ім\'я не може бути порожнім</string>
     <string name="second_name_blank">Прізвище не може бути порожнім</string>
@@ -62,4 +72,7 @@
 
     <string name="language_menu">Мова</string>
     <string name="choose_language">Оберіть мову</string>
+    <string name="error_need_to_sign_in">Лише авторизовані користувачі можуть додавати проблеми. Увійдіть або зареєструйтеся</string>
+    <string name="reset">Скинути</string>
+    <string name="ok">Окей</string>
 </resources>
