--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,8 @@
     <string name="error_need_to_sign_in">Only authorized users can add problems. Please Sign In or Register</string>
     <string name="reset">Reset</string>
     <string name="ok">Okay</string>
+
+    <string name="title_activity_view_photos">Photo viewer</string>
     <!---->
 
     <!--Do not translate!-->
