--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -40,8 +40,9 @@
     <string name="action_add_polygon">Додати полігон</string>
     <string name="profile">Профіль</string>
 
-    <string name="string_suggested_solution">Пропозиції щодо вирішення</string>
-    <string name="string_description">Опис</string>
+    <string name="string_added_by">"Створено: "</string>
+    <string name="string_suggested_solution">Пропозиції щодо вирішення: </string>
+    <string name="string_description">Опис: </string>
     <string name="add_problem_title">Заголовок</string>
     <string name="add_problem_type">Тип проблеми</string>
     <string name="add_problem_add_button">Додати</string>
@@ -76,4 +77,5 @@
     <string name="reset">Скинути</string>
     <string name="ok">Окей</string>
     <string name="title_activity_view_photos">Переглядач фото</string>
+
 </resources>
