--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -77,5 +77,11 @@
     <string name="reset">Скинути</string>
     <string name="ok">Окей</string>
     <string name="title_activity_view_photos">Переглядач фото</string>
+    <string name="item_map">Карта</string>
+    <string name="item_statistics">Статистика</string>
+    <string name="item_top10">ТОП 10</string>
+    <string name="item_filters">Фільтри</string>
+    <string name="item_resources">Ресурси</string>
+    <string name="item_login">Увійти</string>
 
 </resources>
