--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -36,7 +36,7 @@
     <string name="want_logout">Ви насправді бажаєте вийти?</string>
     <string name="change_password">Забули пароль? Змініть його!</string>
     <string name="write_comment">Напишіть коментар...</string>
-    <string name="have_problem">Хьюстон у нас проблема!</string>
+    <string name="have_problem">Хьюстон, у нас проблема!</string>
     <string name="action_add_polygon">Додати полігон</string>
     <string name="profile">Профіль</string>
 
@@ -77,5 +77,9 @@
     <string name="reset">Скинути</string>
     <string name="ok">Окей</string>
     <string name="title_activity_view_photos">Переглядач фото</string>
+    <string name="choose_location">Оберіть місцезнаходження проблеми</string>
+    <string name="add_photo">Додати фото</string>
+    <string name="send">Відправити</string>
+    <string name="add_problem_description">Додайте опис проблеми</string>
 
 </resources>
