--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,5 +109,7 @@
     <string name="item_resources">Resources</string>
     <string name="item_login">Login</string>
 
+    <string name="string_anonymous">Anonymous</string>
+
     <!---->
 </resources>
