--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -75,4 +75,6 @@
     <string name="error_need_to_sign_in">Только авторизированые пользователи могут добавлять проблему. Войдите либо зарегестрируйтесь</string>
     <string name="reset">Сброс</string>
     <string name="ok">Окей</string>
+    <string name="starting_date">начальная дата</string>
+    <string name="end_date">конечная дата</string>
 </resources>
