--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,12 @@
     <string name="item_filters">Filters</string>
     <string name="item_resources">Resources</string>
     <string name="item_login">Login</string>
+    <string name="day_sort">Day</string>
+    <string name="week_sort">Week</string>
+    <string name="month_sort">Month</string>
+    <string name="year_sort">Year</string>
+    <string name="reset_sort">Reset</string>
+    <string name="all_sort">Summary</string>
 
     <string name="string_anonymous">Anonymous</string>
 
