--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -91,4 +91,11 @@
 
     <string name="starting_date">начальная дата</string>
     <string name="end_date">конечная дата</string>
+
+    <string name="day_sort">День</string>
+    <string name="week_sort">Неделя</string>
+    <string name="month_sort">Месяц</string>
+    <string name="year_sort">Год</string>
+    <string name="reset_sort">Сброс</string>
+    <string name="all_sort">Всего</string>
 </resources>
