--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,12 +43,17 @@
     <string name="add_photo">Add photo</string>
     <string name="send">Send</string>
     <string name="add_problem_description">Add Problem Description</string>
+    <string name="uploading_photo">Uploading Photo...</string>
+    <string name="photos_uploaded">Photo Uploaded</string>
+    <string name="uploading_error">Uploading Error</string>
+    <string name="problem_title_blank">Problem title can not be blank</string>
+    <string name="exit">Exit</string>
 
     <string name="string_added_by">"Added by: "</string>
-    <string name="string_suggested_solution">Suggested solution: </string>
+    <string name="string_suggested_solution">Suggested Solution</string>
     <string name="string_description">Description: </string>
-    <string name="add_problem_title">Problem title</string>
-    <string name="add_problem_type">Problem type</string>
+    <string name="add_problem_title">Problem Title</string>
+    <string name="add_problem_type">Problem Type</string>
     <string name="add_problem_add_button">Add</string>
     <string name="first_name">First name</string>
     <string name="last_name">Last name</string>
@@ -108,6 +113,7 @@
     <string name="item_filters">Filters</string>
     <string name="item_resources">Resources</string>
     <string name="item_login">Login</string>
+    <string name="add_comment">Add your comments here</string>
 
     <!---->
 </resources>
