--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -80,7 +80,7 @@
     <string name="choose_location">Выберите месторасположение проблемы</string>
     <string name="add_photo">Добавить фото</string>
     <string name="send">Отправить</string>
-    <string name="add_problem_description">Добавьте описание проблемы</string>
+    <string name="add_problem_description">Описание проблемы</string>
     <string name="item_map">Карта</string>
     <string name="item_statistics">Статистика</string>
     <string name="item_top10">ТОП 10</string>
@@ -104,4 +104,5 @@
     <string name="year_sort">Год</string>
     <string name="reset_sort">Сброс</string>
     <string name="all_sort">Всего</string>
+    <string name="problem_added">Проблема успешно добавлена</string>
 </resources>
