--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -110,4 +110,5 @@
     <string name="filters_menu_item_title">Фільтри</string>
     <string name="nav_titles_statistics">Статистика</string>
     <string name="nav_titles_top10">Топ 10</string>
+    <string name="want_delete_problem">Ви насправді хочете видалити цю проблему?</string>
 </resources>
