only my problems Issue #156

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -126,4 +126,5 @@
     <string name="solved_problem">ВИРІШЕНА</string>
     <string name="unsolved_problem">НЕ ВИРІШЕНА</string>
     <string name="problem_edited">Проблему успішно відредаговано</string>
+    <string name="only_my_problems">Показати лише мої проблеми</string>
 </resources>
