--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="problem_title_blank">Problem title can not be blank</string>
     <string name="exit">Exit</string>
     <string name="problem_added">Problem has been successfully added</string>
+    <string name="show_only_my_problems">Show only my problems</string>
     <string name="problem_edited">Problem has been successfully edited</string>
 
     <string name="string_added_by">"Added by: "</string>
