--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -126,4 +126,5 @@
     <string name="solved_problem">РЕШЕНА</string>
     <string name="unsolved_problem">НЕ РЕШЕНА</string>
     <string name="problem_edited">Проблема успешно отредактирована</string>
+    <string name="only_my_problems"> Показать только мои проблемы</string>
 </resources>
